[project]
name = "highspy"
version = "1.6.0.dev5"
description = "A thin set of pybind11 wrappers to HiGHS"
authors = [
    {name = "HiGHS developers", email = "highsopt@gmail.com"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Source Code" = "https://github.com/ERGO-Code/HiGHS"
"Bug Tracker" = "https://github.com/ERGO-Code/HiGHS/issues"

[build-system]
# Minimum requirements for the build system to execute.
requires = [
  "setuptools>=45",
  "pybind11>=2.4",
  "wheel>=0.2",
  "numpy>=1.7.0",
] 

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp311-*"
skip = "cp36-*"
test-skip = ""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["arm64"]
environment = { RUNNER_OS="macOS" }

repair-wheel-command = """\
  "delocate-listdeps {wheel}",
  DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel \
  --require-archs {delocate_archs} -w {dest_dir} -v {wheel}\
  """

# [tool.cibuildwheel.windows]
# # Use delvewheel on windows, and install the project so delvewheel can find it
# before-build = "pip install delvewheel meson ninja && meson setup bbdir && meson install -C bbdir"
# repair-wheel-command = "delvewheel repair --add-path c:/bin;c:/lib;c:/bin/src;c:/lib/src;D:/a/HiGHS/HiGHS/bbdir/src/ -w {dest_dir} {wheel}"
